--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="./index.css" />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -41,6 +41,6 @@
         </div>
       </section>
     </div>
-    <script src="index.js"></script>
+    <script src="calculator.js"></script>
   </body>
 </html>
